# t5-parasci

./: .gitignore  README.md  pyproject.toml  run_paraphrasing.py
ParaSCI-ACL/: prepare_dataset.ipynb  test.csv  validation.csv
ParaSCI-ACL/train/: train.src  train.tgt
