[tool.poetry]
name = "t5-parasci"
version = "0.1.0"
description = ""
authors = ["Kaito Sugimoto <hellorusk1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.3.0"
pytorch-lightning = "^1.2.5"
transformers = "^4.4.2"
nltk = "^3.5"
datasets = "^1.5.0"
sacrebleu = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
